TodoService err fix